--- a/client/src/components/menu-item/menu-item.component.scss
+++ b/client/src/components/menu-item/menu-item.component.scss
@@ -9,6 +9,10 @@
     margin: 0 7.5px 15px;
     background-position: center;
     background-size: cover;
+
+    &.large {
+        height: 380px;
+    }
   
     &:first-child {
       margin-right: 7.5px;
